# turtlebot3_control

./: CMakeLists.txt  README.md  package.xml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: turtlebot3_bringup.pc  turtlebot3_control.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_example/: turtlebot3_bumper  turtlebot3_cliff  turtlebot3_marker_server  turtlebot3_pointop_key  turtlebot3_server
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_slam/: flat_world_imu_node
devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
devel/share/turtlebot3_control/cmake/: turtlebot3_controlConfig.cmake
devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-extras.cmake  turtlebot3_example-msg-paths.cmake  turtlebot3_exampleConfig.cmake
devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
launch/: turtlebot3_app_control.launch  turtlebot3_gazebo_control.launch
msg/: UdpClientData.msg
scripts/: bot_mover  desired_pose_commander  feedback_thread  position_feedback  udp_server
simulation_requirements/urdf/: turtlebot3_burger.urdf.xacro
src/turtlebot3_control/: CMakeLists.txt  package.xml
src/turtlebot3_control/launch/: turtlebot3_app_control.launch
src/turtlebot3_control/scripts/: UDP_server.py  bot_mover  bot_mover.py  udp_server
src/turtlebot3_control/simulation_requirements/urdf/: turtlebot3_burger.urdf.xacro
(+10 files in other folders)
