<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_control</name>
  <version>1.0.0</version>
  <description>Package designed to operate a turtlebot3 with a mobile app</description>
  <maintainer email="emilia.szymanska.eka@gmail.com">emilia_szymanska</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
